# fastapi-lpr

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging_config.py
app/db/: Olddatabase.py  database.py
app/models/: cameras.py  ocr_log.py  sample.py  user_org.py  vehicle_session.py
app/routers/: ocr.py  test.py
app/schemas/: ocr.py
app/services/: boto3_do_spaces.py  do_space.py  do_spaces.py  ocr_camera.py  ocr_labelMapping.py  ocr_mongo_service.py  ocr_service.py  ocr_session_jobs.py  ocr_session_services.py
app/utils/: ocr.py
