[project]
name = "lpr-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "ultralytics>=8.3.225",
    "opencv-python-headless>=4.12.0.88",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.12.4",
    "motor>=3.7.1",
    "beanie>=2.0.1",
    "aioboto3>=7.0.0",
    "apscheduler>=3.11.2",
    "python-multipart>=0.0.21",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
